# lint_monitor

./: .pylintrc  lint_monitor.py  pyproject.toml
lint_monitor/: __init__.py  monitor.py  table_formatter.py
tests/: test_lint_monitor.py
tests/integration/: test_cli.py  test_cli_with_config.py  test_lint_monitor_integration.py
tests/unit/: test_lint_monitor.py  test_table_formatter.py
