[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "lint-monitor"
version = "0.1.0"
description = "A real-time lint quality monitor with improvement tracking"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "rich>=13.0.0"
]

[project.scripts]
lint-monitor = "lint_monitor.monitor:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
